# ghc-events

./: .gitignore  .travis.yml  CHANGELOG.md  GhcEvents.hs  MergeGhcEvents.hs  README.md  ShowGhcEvents.hs  ShowGhcSparks.hs  Tester.hs  Validate.hs  cabal.haskell-ci  cabal.project  ghc-events.cabal
.github/workflows/: haskell-ci.yml  workflow.yml
GHC/RTS/: EventLogFormat.h  EventParserUtils.hs  EventTypes.hs  Events.hs  EventsIncremental.hs  EventsInternal.hs  LiveLogging.hs
_darcs/: hashed_inventory  index  tentative_hashed_inventory  tentative_pristine
_darcs/inventories/: 0000000957-dff7010fe9dc079d96868326e89ddd412d6e94fe4fad4772a5f708d07b4f5799  0000001228-27cd071bba48732645b541a44e05cf6585683c130aef19f303b278ec788d3bc7  0000001638-d0ec69870c34bc0c4b1a76d98c076b5c625420c021a995976565f70b5db77e0f  0000008632-0cbf82cf9e346394b8776162dccd4aa9105fd67ea7a177e262072801a6a4870d  0000016651-2f23581f51c13e0c8358cd3b16d6bcd80177ad10042d3ce403ef0d1da55e3002  0000017322-eea419b54c7b079f4bbfaf91e3775a3a84987bbe3999e617bbffc4d7a0789bd3  0000017593-26623cc18957daa60264dc517d70f1cf5af69cd74783f98bb3f93ed7922205de  0000017778-1fd861aafaa68aee30089680c22b963b015b5bec07c79c4f6aad9bbc8c854c9c  0000018229-61eb79a774cebc469f8930e8bc52270725c3bfa4a42c21569730faacc18fff3c  0000019321-187b75239e805a97fe548f475d4d4456106260b160cd572684c392a9e0709ae2  0000019356-367bb63384919426fa28e87a8c84460782d1d97b4f8b72ac2754a2e18288fed6  0000019576-2cbd20ba1d129f698b06f3c4bc1797805fa711a6200585e5f9de57d93ac908f0  0000019578-f45a7f143d5b219e924887bb371c3cea731fcda85c5dd2e123cebff312006d7a  0000019592-e2be45edbb91bff64da833c7cb4add71969a6aa8f08c1151a1ab2bf83926abaa  0000019604-d159b806f8dbf3cff4f2676d8357f2fabe3a16219d9fc32602dd463ffab6f2c0  0000019820-c95fc9d7a3b3385ed40d724cc9f3abb5b4d9d907a2327766fb278056415d804b  0000020040-3fad3d6c9412cc885ff4859f9afaffe3ed4468e25a47a04b4ee931e312916fc9
_darcs/patches/: 0000000118-d34cc5deca07396b50297c9dfdfa152eadcd51c09c2af776ff93d92e9cd27d78  0000000168-5d8766670d0c539a47cdbaf94d558678f1fcfeb82ea9010cccf34def61e24694  0000000182-c23d98dba62f5fc7305809dc41b6db313a527088f2de9eb2128a47184c03cb59  0000000190-15377cecc0565113147bc4b083abe7bc4adceb354b57c8005751450b1df87356  0000000199-e66aaafb606bac475ea2925490b45fe611d5577a374f880c16f571a59321b668  0000000200-8777bddc7c3b86aa6d4901ab5e2585287b4dae6ebea9febbe5ba80f63d7b3f06  0000000202-36753acad9f27c86396237f527f3f7aa14bd3fb12e77b624d8669cc4dfbcf07a  0000000203-44da97ca0368cd6eef0d4d9e8336a3671c5480310e3c43c6c2d35804dcedce9b  0000000207-941eb3bfe34b7c471930e9b6a78e2b4c6b5240e788d4b847fc80dcad0128711e  0000000214-356e900800a5fab4d6628009ffb835702d178be8c48c4c9dfc24071b9db87585  0000000214-88cdabd8870cfadffbf30cd8ff094e9924433532a93843a3979e873ba6ea1b27  0000000229-9763c9cd94f3f40ea5a820b9a12e3f72efe41e9394b4316e677a2ffdf9a0ebba  0000000245-e4b9bd7158fb03a8d42bc1b9ba75cb1708533290fcf45d1a5d3c5462a13d2e33  0000000248-1c8ba0a1d33fe0ae640d06acea607968e3a640caf3a0f5075d4b639dd5a6b949  0000000251-25c9edc7050b373a38f2997e52830de51dafb832b274237cbaa8606774a04480  0000000251-5ad01ff7ebdf6b8ffa9986be106ff460115efb73404ca39c2e11ad8ca46cbefa  0000000257-b7f48908b380c8cbdf6c570533842e4f51b6dbaa785495eeb8517de0c6697472  0000000259-f4fd30cd0cc87698deb6b000b15a6bbaf1c2e9a56a1f1e9d45b6a947b690e81a  0000000278-413a593691f5001b45f846d9ef0456c7dff0c9168a5ac106540d3717b89b2e02  0000000286-e9ddaa376c0bc567f87ad08b1b87c962970785669226ad51bb6eafdc545271c4  0000000316-95ee1ef4c4d90a8b6c256a495684124ee9c025db8cbd38d637425920982307a8  0000000320-9d9fd8502cbd9aaaabc786689130104b2bd34b8a014f5a4832ba1a09928c7618  0000000328-bf6a3b293cd21886cd96f1ea30fb8185784b8659c61bfda588b77cc039587704  0000000331-633ffdb14953fbdf259d761f8c0f582cca3caeb7e86f8006ad372dabb8618488  0000000339-c0eb1634c166f1a54b1cfc4122c669c7669811193e966e510a6bb71284e032c8  0000000347-5cf7e9d42cc72be6db7af9a3ad857f65188accc4cc9499553b0c1db91ef00938  0000000357-5866bc5144bc2e470c8dde7b16785be3ecd8577307a2d35deac444df8c773750  0000000376-ae3748ff5b821e8f6250024c3ab8d173c464ea03805780874dd085bdfa3cdb33  0000000383-95a5e9124cedf0f021081093ed000af9c80835c975301944039ccc8562fba991  0000000385-ccec1452c2af1cc5bb5ece9fad010ea69d0041c38722e0137fe44daf48bd8171  0000000387-3740cd7a701b5709fdbab3faf1a5fac145c2317720ec6caeb698fd57c8040d31  0000000426-fe1d04c28116fb3096ff6bafb162fb3bc3cdc381d99a98ce8274a8c19b1e665e  0000000441-5d1a19a1b8f48ef87725787040bdd60b473c75bc92c1beb878056455442286b6  0000000441-a302c2e9eed9e6a554e700b42f76abd7c10edcadee764cbb32e485f68faa4515  0000000508-033ec5ab54740ab06df786375392ad32cb2c8c52d0b6a1d6cbaf26606ce754e8  0000000508-de6f17a74a0935e7a2bacb7168d94c3b7bbc30e250eccabb258dbd3e7928843b  0000000515-10c942823222ac73cfe6aba4813884b90443bc47ff284ac9cc652e8dda727934  0000000515-4a128973040d79484cabc16952cbb997f346c110322c4f3754916a0a210bcc99  0000000519-3619be0942745c1661c936f54c6824de75e417ee5bffff9f541e30567f25893f  (+85 more)
include/: EventLogFormat.h
test/: 782stop.eventlog.reference  783stop.eventlog.reference  Roundtrip.hs  Sort.hs  TestVersions.hs  Unit.hs  Utils.hs  WriteMerge.hs  biographical-samples.eventlog  biographical-samples.eventlog.reference  ghc-9.2-events.eventlog  ghc-9.2-events.eventlog.reference  hello-ghc-8.2.2.eventlog  hello-ghc-8.2.2.eventlog.reference  hello-ghc-8.6.5.eventlog  hello-ghc-8.6.5.eventlog.reference  mandelbrot-mmc-2011-06-14.eventlog.reference  mdlLogMPI1.eventlog.reference  nonmoving-gc-census-T23340.eventlog  nonmoving-gc-census-T23340.eventlog.reference  nonmoving-gc-census.eventlog  nonmoving-gc-census.eventlog.reference  nonmoving-gc-pruned-segments.eventlog  nonmoving-gc-pruned-segments.eventlog.reference  nonmoving-gc.eventlog  nonmoving-gc.eventlog.reference  parallelTest.eventlog  parallelTest.eventlog.reference  pre77stop.eventlog.reference  queens-ghc-6.12.1.eventlog.reference  queens-ghc-7.0.2.eventlog.reference  sleep.h.eventlog  sleep.h.eventlog.reference  sleep.hC.eventlog  sleep.hC.eventlog.reference  sleep.hd.eventlog  sleep.hd.eventlog.reference  sleep.hm.eventlog  sleep.hm.eventlog.reference  sleep.hy.eventlog  (+21 more)
(+72 files in other folders)
