name:             ghc-events
version:          0.4.4.0
synopsis:         Library and tool for parsing .eventlog files from GHC
description:      Parses .eventlog files emitted by GHC 6.12.1 and later.
                  Includes the ghc-events tool permitting, in particular,
                  to dump an event log file as text.
category:         Development, GHC, Debug, Profiling, Trace
license:          BSD3
license-file:     LICENSE
author:           Donnie Jones <donnie@darthik.com>, 
                  Simon Marlow <marlowsd@gmail.com>,
                  Paul Bone <pbone@csse.unimelb.edu.au>,
                  Mischa Dieterle <dieterle@mathematik.uni-marburg.de>,
                  Thomas Horstmeyer <horstmey@mathematik.uni-marburg.de>,
                  Duncan Coutts <duncan@well-typed.com>,
                  Nicolas Wu <nick@well-typed.com>,
                  Jost Berthold <berthold@diku.dk>
                  Mikolaj Konarski <mikolaj@well-typed.com>
maintainer:       Simon Marlow <marlowsd@gmail.com>
bug-reports:      https://github.com/haskell/ThreadScope/issues
build-type:       Simple
tested-with:      GHC == 6.12.3, GHC == 7.4.1, GHC == 7.6.1, GHC == 7.6.3, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.10.1
cabal-version:    >= 1.8
extra-source-files: GHC/RTS/EventLogFormat.h,
                    test/*.eventlog
                    test/stop.hs

source-repository head
  type: git
  location: git@github.com:haskell/ghc-events.git

library
  build-depends:    base       == 4.*,
                    mtl        >= 2.2.1 && < 3.0,
                    containers >= 0.2 && < 0.6,
                    binary     >= 0.5 && < 0.8,
                    bytestring >= 0.9.0,
                    array      >= 0.2 && < 0.6
  exposed-modules:  GHC.RTS.Events,
                    GHC.RTS.Events.Merge
                    GHC.RTS.Events.Analysis
                    GHC.RTS.Events.Analysis.Capability
                    GHC.RTS.Events.Analysis.SparkThread
                    GHC.RTS.Events.Analysis.Thread
  other-modules:    GHC.RTS.EventParserUtils,
                    GHC.RTS.EventTypes
  include-dirs:     GHC/RTS
  extensions:	    RecordWildCards, NamedFieldPuns, BangPatterns, PatternGuards
  other-extensions: FlexibleContexts, CPP

executable ghc-events
  main-is:          GhcEvents.hs
  build-depends:    base, mtl, containers, binary, bytestring, array
  extensions:	    RecordWildCards, NamedFieldPuns, BangPatterns, PatternGuards

test-suite test-versions
  type:             exitcode-stdio-1.0
  main-is:          test/TestVersions.hs
  build-depends:    base, mtl, containers, binary, bytestring, array
  extensions:	    RecordWildCards, NamedFieldPuns, BangPatterns, PatternGuards
